# hash-cracker-bot

./: .env.sample  Cargo.toml  Procfile  README.org  app.json
src/: crack.rs  discord.rs  main.rs  telegram.rs
