[package]
name = "hash_cracker_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.9", features = ["macros", "auto-send"] }
log = "0.4"
pretty_env_logger = "0.4"
reqwest = { version = "0.11", features = ["json"]}
anyhow = "1"
tokio = { version =  "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"
serenity = { version = "0.11", features = ["framework", "standard_framework"] }
dotenv = "0.15.0"